syntax = "proto3";

option go_package = "github.com/ringsaturn/tzf-server/proto/v1;v1";

package proto.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";

// Simple server convert longitude&latitude to timezone name
service TZFService {
  option (google.api.default_host) = "0.0.0.0:8080";

  rpc GetTimezone(GetTimezoneRequest) returns (GetTimezoneResponse) {
    option (google.api.http) = {
      get: "/api/v1/tz"
    };
  }

  rpc GetTimezones(GetTimezonesRequest) returns (GetTimezonesResponse) {
    option (google.api.http) = {
      get: "/api/v1/tzs"
    };
  }

  rpc GetAllTimezones(GetAllTimezonesRequest)
      returns (GetAllTimezonesResponse) {
    option (google.api.http) = {
      get: "/api/v1/tzs/all"
    };
  }
}

message GetTimezoneRequest {
  // @gotags: query:"lng" vd:"$>=-180 && $<=180"
  double longitude = 1;

  // @gotags: query:"lat" vd:"$>=-90 && $<=90"
  double latitude = 2;
};

message GetTimezonesRequest {
  // @gotags: query:"lng" vd:"$>=-180 && $<=180"
  double longitude = 1;

  // @gotags: query:"lat" vd:"$>=-90 && $<=90"
  double latitude = 2;
};

message GetTimezoneResponse {
  string timezone = 1;
  string abbreviation = 2;
  int64 offset = 3;
}

message GetTimezonesResponse {
  repeated GetTimezoneResponse timezones = 1;
}

message GetAllTimezonesRequest {}

message GetAllTimezonesResponse {
  repeated GetTimezoneResponse timezones = 1;
}
